# QMEX

./: CMakeLists.txt  README.md  cli.cpp  qmex.cpp  qmex.hpp
test/: CMakeLists.txt  demo.bat  demo.ini  demo.lua  demo.sh  test_criteria.cpp  test_number.cpp
